plugins {
    id("java")
    id("org.springframework.boot") version "2.7.11-SNAPSHOT"
    id("io.spring.dependency-management") version "1.0.15.RELEASE"
    id("org.openjfx.javafxplugin") version "0.0.10"
}

javafx {
    version = "11.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}


group = 'org.proyecto'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
    maven { url 'https://maven.javafx.io' }
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation files("${rootDir}/lib/excel/commons-collections4-4.1.jar")
    implementation files("${rootDir}/lib/excel/poi-3.16.jar")
    implementation files("${rootDir}/lib/excel/poi-ooxml-3.16.jar")
    implementation files("${rootDir}/lib/excel/poi-ooxml-schemas-3.16.jar")
    implementation files("${rootDir}/lib/excel/xmlbeans-2.6.0.jar")


    implementation files("${rootDir}/lib/jfree/hamcrest-core-1.3.jar")
    implementation files("${rootDir}/lib/jfree/jcommon-1.0.23.jar")
    implementation files("${rootDir}/lib/jfree/jfreechart-1.0.19.jar")
    implementation files("${rootDir}/lib/jfree/jfreechart-1.0.19-experimental.jar")
    implementation files("${rootDir}/lib/jfree/jfreechart-1.0.19-swt.jar")
    implementation files("${rootDir}/lib/jfree/jfreesvg-2.0.jar")
    implementation files("${rootDir}/lib/jfree/junit-4.11.jar")
    implementation files("${rootDir}/lib/jfree/orsoncharts-1.4-eval-nofx.jar")
    implementation files("${rootDir}/lib/jfree/orsonpdf-1.6-eval.jar")
    implementation files("${rootDir}/lib/jfree/servlet.jar")
    implementation files("${rootDir}/lib/jfree/swtgraphics2d.jar")


    implementation files("${rootDir}/lib/jfx/javafx.controls.jar")
    implementation files("${rootDir}/lib/jfx/javafx.fxml.jar")
    implementation files("${rootDir}/lib/jfx/javafx.graphics.jar")

    // implementation 'org.openjfx:javafx:11.0.2'
    /*
    implementation 'org.openjfx:javafx-controls:11.0.2:win'
    implementation 'org.openjfx:javafx-fxml:11.0.2:win'
    implementation 'org.openjfx:javafx-graphics:11.0.2:win'
    */


}

/*
run {
    jvmArgs = [
            '--module-path',
            '.\\lib\\jfx\\javafx-sdk-11.0.2\\lib',
            '--add-modules',
            'javafx.controls,javafx.fxml'
    ]
}
*/

task runStatsTable(type: JavaExec) {
    main = 'proyecto.multiplicacionmatrices.StatsTable'
    classpath = sourceSets.main.runtimeClasspath
    jvmArgs '--module-path', '.\\lib\\jfx\\javafx-sdk-11.0.2\\lib', '--add-modules', 'javafx.controls,javafx.fxml'
}

tasks.named('runStatsTable') {
    doFirst {
        println "Ejecutando StatsTable con opciones de VM personalizadas"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
